챌린지 리스트 조히

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -18,7 +18,15 @@
         <%}else{%>
             <button type="button" class="btn btn-outline-dark" onclick="location.href='/signin'">로그인</button>
             <%}%>
-    </div>
+    
+            <div>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/1'">운동</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/2'">요리</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/3'">음악</button>
+                <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/4'">기타</button>
+            </div>
+        </div>
+
    
 
 </body>
