--- a/views/listChallenge.ejs
+++ b/views/listChallenge.ejs
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <title>listChallenge</title>
 </head>
 <body>
-    
+    <div class="px-4 py-5 my-5 text-center">
+        <div class="col-lg-10 mx-auto">
+            <table class="table">
+                <tr>
+                  <th scope="col">번호</th>
+                  <th scope="col">챌린지 명</th>
+                  <th scope="col">시작 일자</th>
+                </tr>
+                <%
+                for(var i = 0; i<rows.length; i++)
+                {
+                %>
+                <tr>
+                  <td><%=i+1%></td>
+                  <td><a href=""><%=rows[i].name%></a></td>
+                  <td><%=rows[i].start_date%></td>
+                </td>
+                </tr>
+                <%
+                }
+                %>
+          
+              </table>
+        </div>
+        
+    </div>
 </body>
 </html>
