--- a/views/listChallenge.ejs
+++ b/views/listChallenge.ejs
@@ -23,7 +23,7 @@
                 %>
                 <tr>
                   <td><%=i+1%></td>
-                  <td><a href=""><%=rows[i].name%></a></td>
+                  <td><a href="/challenge/<%=rows[i].id%>"><%=rows[i].name%></a></td>
                   <td><%=rows[i].start_date%></td>
                 </td>
                 </tr>
