--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="px-4 py-5 my-5 text-center">
+        <div class="col-lg-10 mx-auto">
+            <table class="table">
+                <tr>
+                  <th scope="col">챌린지 명</th>
+                  <th scope="col">시작 일자</th>
+                </tr>
+                <tr>
+                  <td><a href=""><%=detail[0].name%></a></td>
+                  <td><%=detail[0].start_date%></td>
+                </td>
+                </tr>
+              </table>
+        </div>
+        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href=''">참여</button></td>
+    </div>
 </body>
 </html>
