--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -17,6 +17,7 @@
                 <tr>
                   <td><a href=""><%=detail[0].name%></a></td>
                   <td><%=detail[0].start_date%></td>
+                  <td><img src="<%=detail[0].image%>"/></td>
                 </td>
                 </tr>
               </table>
