database 맞게 속성명 수정

--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -15,9 +15,9 @@
                   <th scope="col">시작 일자</th>
                 </tr>
                 <tr>
-                  <td><a href=""><%=detail[0].name%></a></td>
-                  <td><%=detail[0].start_date%></td>
-                  <td><img src="<%=detail[0].image%>"/></td>
+                  <td><a href=""><%=detail[0].challenge_title%></a></td>
+                  <td><%=detail[0].challenge_start_date%></td>
+                  <td><img src="<%=detail[0].challenge_image%>"/></td>
                 </td>
                 </tr>
               </table>
