--- a/views/listChallenge.ejs
+++ b/views/listChallenge.ejs
@@ -23,8 +23,8 @@
                 %>
                 <tr>
                   <td><%=i+1%></td>
-                  <td><a href="/challenge/<%=rows[i].id%>"><%=rows[i].name%></a></td>
-                  <td><%=rows[i].start_date%></td>
+                  <td><a href="/challenge/<%=rows[i].challenge_uid%>"><%=rows[i].challenge_title%></a></td>
+                  <td><%=rows[i].challenge_start_date%></td>
                 </td>
                 </tr>
                 <%
@@ -33,7 +33,7 @@
           
               </table>
         </div>
-        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/insert/<%=category_id%>'">개설</button></td>
+        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/insert/<%=challenge_type%>'">개설</button></td>
     </div>
 </body>
 </html>
