--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/home/login.css" >
+
     <title>signin</title>
 </head>
 <body class="text-center">
-    <div>
-        <h2>signin</h2>
-        <form action='/signin/post' method='post'>
-            <div >
-                    ID  <input type="text" name='id'>
-                </div>
-                <div>
-                    PW  <input type="text" name='pw'>
-                </div>
-                <button type="submit" class="btn btn-outline-dark">sign in</button>
-                <button type="button" class="btn btn-outline-dark" onclick="location.href='/signup'">sign up</button>
-            </div>
-            
-
-        </form>
-    </div>
+    <div class="login-page">
+        <div class="form">
+            <h2 class='font_s'>Motivation For Challenge</h2>
+            <h2 class='font'>MFC</h2>
+          <!-- <form class="register-form" action='/signin/post' method="post">
+            ID<input type="text" placeholder="name" name='id'/>
+            PW<input type="text" placeholder="password" name='pw'/>
+            <button type="submit" class="btn btn-outline-dark">sign in</button>
+            <button type="button" class="btn btn-outline-dark" onclick="location.href='/signup'">sign up</button>
+            <p class="message">Already registered? <a href="#">Sign In</a></p>
+          </form> -->
+          <form class="login-form" action='/signin/post' method="post">
+            <input type="text" placeholder="ID" name='id'/>
+            <input type="password" placeholder="PASSWORD" name='pw'/>
+            <button type="submit" class="btn btn-outline-dark">sign in</button>
+            <button type="button" class="btn btn-outline-dark" onclick="location.href='/signup'">sign up</button>
+          </form>
+        </div>
+      </div>
 </body>
 </html>
