--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,43 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/home/login.css" >
+    
     <title>signup</title>
 </head>
 <body class="text-center">
-    <div>
-        <h2>signup</h2>
-        <form action='/signup/post' method='post'>
-            <div >
-                <div>
-                    NAME  <input type="text" name='name'>
-                </div>
-                <div>
-                    ID  <input type="text" name='id'>
-                </div>
-                <div>
-                    PW  <input type="text" name='pw'>
-                </div>
-                <div>
-                    CHACK PW  <input type="text" name='check_pw'>
-                </div>
-                <div>
-                    E-MAIL  <input type="text" name='email'>
-                </div>
-                <div>
-                    INTEREST  <select type="text" name='interest'>
-                        <option>운동</option>
-                        <option>요리</option>
-                        <option>음악</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-outline-dark">sign up</button>
-                
+    <div class="login-page">
+        <div class="form">
+            <h2 class='font'>signup</h2>
+          <form class="login-form" action='/signup/post' method="post">
+            <div>
+                <input type="text" name='name' placeholder="NAME">
             </div>
-            
+            <div>
+                <input type="text" name='id' placeholder="ID">
+            </div>
+            <div>
+               <input type="text" name='pw' placeholder="PASSWORD">
+            </div>
+            <div>
+               <input type="text" name='check_pw' placeholder="CHECK PASSWORD">
+            </div>
+            <div>
+                <input type="text" name='email' placeholder="EMAIL">
+            </div>
+            <div>
+                INTEREST <select type="text" name='interest'>
+                    <option value='운동'>운동</option>
+                    <option value='요리'>요리</option>
+                    <option value='음악'>음악</option>
+                </select>
+            </div>
 
-        </form>
-    </div>
+            <button type="submit" class="btn btn-outline-dark">sign up</button>
+          </form>
+        </div>
+      </div>
 </body>
 </html>
