--- a/views/category.ejs
+++ b/views/category.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="text-center"> 
-        <h2>안녕하세요 <%=nickname%>님</h2> 
-        
+        <h2><%=session%></h2> 
+
         <% if(session){%>
             <form class="form-inline" action='/signout' method='get'>
                 <button class="btn btn-outline-dark" type='submit'>로그아웃</button>
