챌린지 인원증가 오류 수정 및 인증, 게시판 init

--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="px-4 py-5 my-5 text-center">
+      <button type="button" class="btn btn-outline-dark" onclick="location.href=''">상세</button>
+      <button type="button" class="btn btn-outline-dark" onclick="location.href='/challenge/<%=detail[0].challenge_uid%>/proof'">인증</button>
+      <button type="button" class="btn btn-outline-dark" onclick="location.href='/challenge/<%=detail[0].challenge_uid%>/board'">게시판</button>
         <div class="col-lg-10 mx-auto">
             <table class="table">
                 <tr>
