challenge, proof 추가

--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -25,7 +25,7 @@
                 </tr>
               </table>
         </div>
-        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href=''">참여</button></td>
+        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href='/challenge/participate/<%=detail[0].challenge_uid%>'">참여</button></td>
     </div>
 </body>
 </html>
