--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -22,7 +22,7 @@
     
 <li  class="navbar-text active justify-content-end"> 
   <% if(session){%>
-  안녕하세요 <%=nickname%>님
+  안녕하세요 <%=session%>님
 
 
   <li>
