--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,15 +29,15 @@
                <input type="text" name='check_pw' placeholder="CHECK PASSWORD">
             </div>
             <div>
+                <input type="text" name='email' placeholder="EMAIL">
+            </div>
+            <div>
                 INTEREST<br><br> <select type="text" name='interest'>
                     <option>운동</option>
                     <option>요리</option>
                     <option>음악</option>
                 </select>
             </div>
-            <!-- <div>
-                <input type="text" name='email' placeholder="EMAIL">
-            </div> -->
             <button type="submit" class="btn btn-outline-dark">sign up</button>
           </form>
         </div>
