--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -17,9 +17,6 @@
                 <input type="text" name='name' placeholder="NAME">
             </div>
             <div>
-                <input type="text" name='nickname' placeholder="NCIKNAME">
-            </div>
-            <div>
                 <input type="text" name='id' placeholder="ID">
             </div>
             <div>
@@ -29,15 +26,15 @@
                <input type="text" name='check_pw' placeholder="CHECK PASSWORD">
             </div>
             <div>
+                <input type="text" name='email' placeholder="EMAIL">
+            </div>            <div>
                 INTEREST<br><br> <select type="text" name='interest'>
                     <option>운동</option>
                     <option>요리</option>
                     <option>음악</option>
                 </select>
             </div>
-            <!-- <div>
-                <input type="text" name='email' placeholder="EMAIL">
-            </div> -->
+
             <button type="submit" class="btn btn-outline-dark">sign up</button>
           </form>
         </div>
