--- a/views/category.ejs
+++ b/views/category.ejs
@@ -10,35 +10,33 @@
 </head>
 <body>
     <div class="text-center"> 
-        
 
-              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://item.kakaocdn.net/do/6862fba2295ce6299936c3a12ef7a9fcf43ad912ad8dd55b04db6a64cddaf76d" class="d-block w-20" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://item.kakaocdn.net/do/6862fba2295ce6299936c3a12ef7a9fcf43ad912ad8dd55b04db6a64cddaf76d" class="d-block w-20" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://item.kakaocdn.net/do/6862fba2295ce6299936c3a12ef7a9fcf43ad912ad8dd55b04db6a64cddaf76d" class="d-block w-20" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-              
-              
+      <div class="card" style="width: 18rem; margin-left: 10%; margin-top: 7%">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        
+      </div>
+
+      <div class="text-center"> 
+
+        <div class="card" style="width: 18rem; margin-left: 10%; margin-top: 7%">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          
+        </div>
+        
 
             
 
-            <div class="" style="margin-top: 15%;">
+            <div class="" style="margin-top: 10%;">
                 <button type="button" class="btn btn-outline-dark mx-3 my-3" onclick="location.href='/list/1'"><img src="https://item.kakaocdn.net/do/6862fba2295ce6299936c3a12ef7a9fcf43ad912ad8dd55b04db6a64cddaf76d" height ="100" width="150"><p>운동</p></button>
                 <button type="button" class="btn btn-outline-dark mx-3 my-3" onclick="location.href='/list/2'"><img src="https://i.pinimg.com/originals/d9/44/14/d944141d350c211238576f3b9b944d37.gif" height="100" width="150"><p>요리</p></button>
                 <button type="button" class="btn btn-outline-dark mx-3 my-3" onclick="location.href='/list/3'"><img src="https://i.pinimg.com/originals/27/bf/8f/27bf8f6b33a219aa2db9c069b49195c5.gif" height="100" width="150"><p>음악</p></button>
