--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,35 +1,39 @@
-<nav class="navbar navbar-expand-sm justify-content-end bg-light fixed-top" > 
+<style>
+  @font-face {
+  font-family: 'SB OTF M';
+  font-weight: 100;
+  src: url("../font/SB\ OTF\ M.otf") format(truetype);
+}
+</style>
 
-  <ul  class="navbar-nav " > 
-      
 
-    </li> 
-
-    <li class="nav-item justify-content-end"> 
-
-      <% if(session){%>
-          <form class="form-inline" action='/signout' method='get'>
-              <button class="btn btn-outline-dark" type='submit'>로그아웃</button>
-          </form>    
-      <%}else{%>
-          <button type="button" class="btn btn-outline-dark mx-3" onclick="location.href='/signin'">로그인</button>
-          <%}%>
-
-    </li> 
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/" style="font-weight: 900;", style="font-family: SB OTF M">
+    <img src="./images/logo.png" width ="30" heigh="30" class="d-inline-block align-top" alt="">
+    MFC</a>
 
   
 
+  <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 80%;" >
     
-<li  class="navbar-text active justify-content-end"> 
-  <% if(session){%>
-  안녕하세요 <%=nickname%>님
+    <% if(session){%>
+      <ul class="navbar-nav ml-auto">
+        <form class="form-inline" action='/signout' method='get'>
+          <button class="btn btn-outline-dark" type='submit'>로그아웃</button>
+      </form>
+      <li  class="nav-item" style="margin-top: 8px;"> <%=session%>님</li>
+      
 
+      </ul>
+      <a href='/mypage/myInfo/<%=session%>'>
+        <img src="https://e7.pngegg.com/pngimages/612/745/png-clipart-thin-line-user-icon-icons-logos-emojis-users.png"  alt="Logo" style="width:40px;"> 
+      </a>
+      
+  <%}else{%>
+      <button type="button" class="btn btn-outline-dark mx-3" onclick="location.href='/signin'">로그인</button>
+      <%}%>
 
-  <li>
-      <img src="https://e7.pngegg.com/pngimages/612/745/png-clipart-thin-line-user-icon-icons-logos-emojis-users.png" alt="Logo" style="width:40px;"> 
-
-    </li> 
-    <%}%>
-  </ul> 
-
+      
+  </div>
 </nav>
