--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -8,7 +8,7 @@
   
   
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="/" style="font-weight: 900;", style="font-family: SB OTF M">
       <img src="./images/logo.png" width ="30" heigh="30" class="d-inline-block align-top" alt="">
       MFC</a>
@@ -98,7 +98,7 @@
             <li class="sidebar-brand">
               <p style="color: white;">Mypage</p>
             </li>
-            <li><a href="/mypage/updateMyInfo/<%=session%>">내정보</a></li>
+            <li><a href="/mypage/myInfo/<%=session%>">내정보</a></li>
             <li><a href="/mypage/challenge/<%=session%>">챌린지 정보</a></li>
             <li><a href="/mypage/post/<%=session%>">게시글</a></li>
         
