--- a/views/listChallenge.ejs
+++ b/views/listChallenge.ejs
@@ -33,7 +33,7 @@
           
               </table>
         </div>
-        <td> <button type="button" class="btn btn-outline-dark" onclick="location.href='/list/insert/<%=challenge_type%>'">개설</button></td>
+        <td> <button style="" type="button" class="btn btn-outline-dark" onclick="location.href='/list/insert/<%=challenge_type%>'">개설</button></td>
     </div>
 </body>
 </html>
