--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
 
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="/" style="font-weight: 900;", style="font-family: SB OTF M">
     <img src="./images/logo.png" width ="30" heigh="30" class="d-inline-block align-top" alt="">
     MFC</a>
