image upload and print

--- a/views/detailChallenge.ejs
+++ b/views/detailChallenge.ejs
@@ -20,7 +20,7 @@
                 <tr>
                   <td><a href=""><%=detail[0].challenge_title%></a></td>
                   <td><%=detail[0].challenge_start_date%></td>
-                  <td><img src="<%=detail[0].challenge_image%>"/></td>
+                  <td><img src="<%=detail[0].challenge_image%>" alt="이미지" width="200"/></td>
                 </td>
                 </tr>
               </table>
