--- a/views/insertChallenge.ejs
+++ b/views/insertChallenge.ejs
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form class = "login-form" action='/create' method='post'>
+    <form class = "login-form" action='/create' method='post' enctype="multipart/form-data">
         <div class="login-page" style="margin-top: 8%;">
             <div class="form">
                 <div>
