--- a/views/insertProof.ejs
+++ b/views/insertProof.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action='/challenge/<%=challenge_uid%>/insert' method='post'>
+    <form action='/challenge/<%=challenge_uid%>/insert' method='post'  enctype="multipart/form-data">
         <div style="margin-top: 8%;">
             <div class="form">
                 <div>
