--- a/views/proof.ejs
+++ b/views/proof.ejs
@@ -41,7 +41,7 @@
                 %>
                 <tr>
                   <td><%=i+1%></td>
-                  <td><%=rows[i].proof_image%></td>
+                  <td><img src="<%=rows[i].proof_image%>" alt="이미지" width="200"/></td>
                   <td><%=rows[i].proof_content%></td>
                   <td><%=rows[i].user_uid%></td>
                   <td><%=rows[i].proof_create_date%></td>
