--- a/views/myinfo.ejs
+++ b/views/myinfo.ejs
@@ -23,10 +23,7 @@
                     <div class="col-md-4">
                         <div class="profile-img">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
-                            <div class="file btn btn-lg btn-primary">
-                                Change Photo
-                                <input type="file" name="file"/>
-                            </div>
+                           
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -49,8 +46,10 @@
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <button type="button" class="btn btn-outline-dark mx-3" onclick="location.href='/mypage/post/<%=session%>'">수정</button>
+                        <button type="button" class="btn btn-outline-dark mx-3" onclick="location.href='/mypage/updateMyInfo/<%=session%>'">수정</button>
+                        <button type="button" class="btn btn-outline-dark mx-3" onclick="location.href='/mypage/post/<%=session%>'">회원탈퇴</button>
                     </div>
+                    
                 </div>
                 <div class="row">
                     <div class="col-md-4">
